Fix(words): button alignment on settings

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,15 +2,15 @@
     --primary-color: #2fa1ff;
     --secondary-color: #ff4b4b;
     --tertiary-color: #0dbf6c;
-    --bg-color: #ffffff;
-    --secondary-bg: #f0f2f6;
-    --text-color: #262730;
-
     --primary-color-hover: #1a8cd4;
     --secondary-color-hover: #d33737;
     --tertiary-color-hover: #09924d;
 
-    --word-card-text-color: #000000;
+    --bg-color: #ffffff;
+    --secondary-bg: #f0f2f6;
+    --text-color: #000000;
+    --text-light-color: #848484;
+
     --word-card-color: #c1dffc;
 }
 
