--- a/styles/words.css
+++ b/styles/words.css
@@ -22,7 +22,7 @@
     background-color: var(--word-card-color);
     border-radius: 8px;
     padding: 1.2rem 0.8rem;
-    color: var(--word-card-text-color);
+    color: var(--text-color);
 
     &.searched-word {
         background-color: var(--tertiary-color);
